--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
